fix for missing apply now on mobile

--- a/media/css/system-responsive-2.css
+++ b/media/css/system-responsive-2.css
@@ -1166,9 +1166,7 @@ label em,
 /* breaks for tablets */
 @media screen and (max-width: 1023px) {
 	.breadcrumbs, 
-	#tnt_pagination a, 
-	.apply-now-image2
-	{
+	#tnt_pagination a	{
 		display: none;
 	}
 	#tnt_pagination .search-previous-button
